syntax = "proto3";

package inference;

service InferenceService {
  rpc Predict (PredictRequest) returns (PredictResponse);
}

message PredictRequest {
  string model_name = 1;
  string input_text = 2;
  string trace_id = 3;
}

message PredictResponse {
  string output_text = 1;
}
